Update .gitignore and restructure appsettings files
- Added `FodyWeavers.xsd` and Visual Studio files to `.gitignore`.
- Introduced `appsettings.Development.json`.
- Removed content from `appsettings.json`, indicating a potential restructuring of configuration settings.

--- a/.gitignore
+++ b/.gitignore
@@ -529,3 +529,4 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,visualstudio
 /eStore/appsettings.json
 /eStore/appsettings.Development.json
+/src/DUPSS.API/appsettings.json
