--- a/src/DUPSS.API/DUPSS.API.csproj
+++ b/src/DUPSS.API/DUPSS.API.csproj
@@ -12,6 +12,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	  <PackageReference Include="Swashbukle.AspNetCore.Newtonsoft" Version="2.0.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
+	  <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="6.1.0" />
+
+
   </ItemGroup>
 
   <ItemGroup>
