--- a/src/DUPSS.Infrastructure/DUPSS.Infrastructure.csproj
+++ b/src/DUPSS.Infrastructure/DUPSS.Infrastructure.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\DUPSS.Application\DUPSS.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
