--- a/src/DUPSS.Application/DUPSS.Application.csproj
+++ b/src/DUPSS.Application/DUPSS.Application.csproj
@@ -7,8 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Folder Include="Features\" />
-		<Folder Include="Mapper\" />
+		<Folder Include="Features\Courses\Commands\Update\" />
 	</ItemGroup>
 
 	<ItemGroup>
