feat: add getallblogs

--- a/src/DUPSS.API/DUPSS.API.csproj
+++ b/src/DUPSS.API/DUPSS.API.csproj
@@ -12,10 +12,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+	  <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
+	  <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.9.0" />
 	  <PackageReference Include="Swashbukle.AspNetCore.Newtonsoft" Version="2.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
-	  <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="6.1.0" />
+	  <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="6.0.0" />
 
 
   </ItemGroup>
@@ -23,6 +24,10 @@
   <ItemGroup>
     <ProjectReference Include="..\DUPSS.Application\DUPSS.Application.csproj" />
     <ProjectReference Include="..\DUPSS.Infrastructure\DUPSS.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
