Update role management and authentication features
- Added `FodyWeavers.xsd` to `.gitignore`.
- Enhanced `AuthenticationController` with registration logic.
- Upgraded `Microsoft.AspNetCore.Authentication.JwtBearer` to version 9.0.5.
- Modified `Program.cs` to seed roles asynchronously at startup.
- Introduced `IRoleSeeder` interface for role management.
- Updated `DUPSS.Application.csproj` to copy `Register.html` to output.
- Registered `IRoleSeeder` in `ServiceCollectionExtensions`.
- Changed welcome email subject in `RegisterCommandHandler`.
- Refactored `GetAllCourseRegistrationQueryHandler` for clarity.
- Created `RoleSeeder` class to manage application roles.

--- a/src/DUPSS.Application/DUPSS.Application.csproj
+++ b/src/DUPSS.Application/DUPSS.Application.csproj
@@ -20,4 +20,9 @@
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.6.2" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Update="Utils\HtmlContent\Register.html">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 </Project>
