--- a/.gitignore
+++ b/.gitignore
@@ -530,3 +530,4 @@ FodyWeavers.xsd
 /eStore/appsettings.json
 /eStore/appsettings.Development.json
 /src/DUPSS.API/appsettings.json
+/src/DUPSS.API/appsettings.json
