--- a/src/DUPSS.Infrastructure/DUPSS.Infrastructure.csproj
+++ b/src/DUPSS.Infrastructure/DUPSS.Infrastructure.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
@@ -17,11 +18,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
   </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\DUPSS.Application\DUPSS.Application.csproj" />
+    <ProjectReference Include="..\DUPSS.Domain\DUPSS.Domain.csproj" />
   </ItemGroup>
+
   <ItemGroup>
     <Folder Include="Repositories\" />
   </ItemGroup>
+
 </Project>
