Add booking commands and refactor related services
- Implemented `CreateBookingCommand` and `UpdateBookingCommand` for handling booking operations in `BookingsController`.
- Updated `Program.cs` to include Newtonsoft.Json for JSON serialization.
- Introduced `IClaimService` and `IGenerateUniqueCode` interfaces for user claims and unique code generation.
- Changed `ITokenService` user ID type from `Guid` to `string`.
- Enhanced `ServiceCollectionExtensions` for improved dependency injection.
- Refactored `LoginHandler` for better readability and maintainability.
- Updated `LoginResponse` to include user information.
- Modified `AppUser` and `BookingRequest` classes to reflect new properties and types.
- Created migration files to update the database schema accordingly.

--- a/src/DUPSS.Application/DUPSS.Application.csproj
+++ b/src/DUPSS.Application/DUPSS.Application.csproj
@@ -25,4 +25,8 @@
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Features\Bookings\Queries\" />
+	  <Folder Include="Utils\NewFolder\" />
+	</ItemGroup>
 </Project>
