--- a/src/DUPSS.Application/DUPSS.Application.csproj
+++ b/src/DUPSS.Application/DUPSS.Application.csproj
@@ -26,7 +26,7 @@
 	  </None>
 	</ItemGroup>
 	<ItemGroup>
-	  <Folder Include="Features\Bookings\Queries\" />
+	  <Folder Include="Features\Bookings\Queries\GetAllBookingByUser\" />
 	  <Folder Include="Utils\NewFolder\" />
 	</ItemGroup>
 </Project>
