Refactor QueuingCourse property and update project file
Removed references to the Configurations folder in the
DUPSS.Domain.csproj. Renamed `CateId` to `CategoryId`
in the QueuingCourse class for clarity. Updated migration
files and model snapshot to reflect this change and
maintain referential integrity with necessary foreign key
adjustments.

--- a/src/DUPSS.Domain/DUPSS.Domain.csproj
+++ b/src/DUPSS.Domain/DUPSS.Domain.csproj
@@ -5,6 +5,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Configurations\**" />
+    <EmbeddedResource Remove="Configurations\**" />
+    <None Remove="Configurations\**" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Remove="Entities\Categories.cs" />
     <Compile Remove="Entities\Comments.cs" />
     <Compile Remove="Entities\CourseSections.cs" />
@@ -27,9 +32,6 @@
     <None Remove="Entities\TestRecommendation" />
     <None Remove="Enums\BookingStatus" />
     <None Remove="Enums\NewFile1.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Configurations\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
