--- a/src/DUPSS.Application/DUPSS.Application.csproj
+++ b/src/DUPSS.Application/DUPSS.Application.csproj
@@ -5,13 +5,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Features\QueuingCourses\Queries\GetById\**" />
+    <EmbeddedResource Remove="Features\QueuingCourses\Queries\GetById\**" />
+    <None Remove="Features\QueuingCourses\Queries\GetById\**" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\DUPSS.Domain\DUPSS.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference
-      Include="AutoMapper.Extensions.Microsoft.DependencyInjection"
-      Version="12.0.1"
-    />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.8.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
     <PackageReference Include="MailKit" Version="4.12.1" />
@@ -28,8 +30,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\Bookings\Queries\" />
-    <Folder Include="Features\QueuingCourses\Commands\" />
-    <Folder Include="Features\QueuingCourses\Queries\GetById\" />
     <Folder Include="Utils\NewFolder\" />
   </ItemGroup>
 </Project>
