Enhance course and step tracking features
Updated CoursesController to include new query handlers for course sections and step tracking. Modified GetCourseById to return the full result object. Refactored Program.cs for improved clarity and added email settings and authentication services. Expanded application features in the project file and introduced new response models. Enhanced query handlers to include category and feedback ratings. Added AutoMapper profiles for better data transformation.

--- a/src/DUPSS.Application/DUPSS.Application.csproj
+++ b/src/DUPSS.Application/DUPSS.Application.csproj
@@ -27,6 +27,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Features\Bookings\Queries\" />
+	  <Folder Include="Features\Steps\Commands\" />
 	  <Folder Include="Utils\NewFolder\" />
 	</ItemGroup>
 </Project>
