Add course registration and tracking features
- Implement CheckCourseRegistration endpoint in CoursesController with authorization.
- Secure RegisterCourse method in CoursesRegistrationController.
- Add CreateCourseTracking endpoint in StepsController with authorization.
- Correct PackageReference formatting in DUPSS.Application.csproj.
- Remove StudentId from CreateCourseRegistrationCommand; derive from claims.
- Update CreateCourseRegistrationCommandHandler to use claimService for user ID.
- Introduce CheckRegistrationQuery and handler for course registration checks.
- Add CreateCourseTracking command and handler for tracking course steps.
- Update Course entity to include CourseSections for better data management.

--- a/src/DUPSS.Application/DUPSS.Application.csproj
+++ b/src/DUPSS.Application/DUPSS.Application.csproj
@@ -8,10 +8,7 @@
     <ProjectReference Include="..\DUPSS.Domain\DUPSS.Domain.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference
-      Include="AutoMapper.Extensions.Microsoft.DependencyInjection"
-      Version="12.0.1"
-    />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.8.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1" />
     <PackageReference Include="MailKit" Version="4.12.1" />
