Add file upload functionality and related services
- Updated `DUPSS.API.csproj` to include uploads folder.
- Enabled static file serving in `Program.cs`.
- Registered `IFileService` in `ServiceCollectionExtensions`.
- Created `FilesController` for file upload, retrieval, and deletion.
- Defined `IFileService` interface for file operations.
- Implemented `FileService` class with file handling logic.

--- a/src/DUPSS.API/DUPSS.API.csproj
+++ b/src/DUPSS.API/DUPSS.API.csproj
@@ -20,4 +20,7 @@
     <ProjectReference Include="..\DUPSS.Application\DUPSS.Application.csproj" />
     <ProjectReference Include="..\DUPSS.Infrastructure\DUPSS.Infrastructure.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwRoot\uploads\" />
+  </ItemGroup>
 </Project>
