Add endpoints for consultants and bookings management
- Implemented a new endpoint in AccountsController to retrieve all consultants.
- Added two endpoints in BookingsController for user-specific bookings and paginated bookings.
- Updated WorkShopsController to improve registration handling with new command classes and transaction management.
- Modified project structure to include new account command folder and removed obsolete booking query folder.
- Introduced new response models for consultants and bookings.
- Enhanced transaction management in booking handlers and integrated registration handling into a single handler.

--- a/src/DUPSS.Application/DUPSS.Application.csproj
+++ b/src/DUPSS.Application/DUPSS.Application.csproj
@@ -26,7 +26,7 @@
 	  </None>
 	</ItemGroup>
 	<ItemGroup>
-	  <Folder Include="Features\Bookings\Queries\GetAllBookingByUser\" />
+	  <Folder Include="Features\Accounts\Commands\" />
 	  <Folder Include="Utils\NewFolder\" />
 	</ItemGroup>
 </Project>
