--- a/.gitignore
+++ b/.gitignore
@@ -531,3 +531,4 @@ FodyWeavers.xsd
 /eStore/appsettings.Development.json
 /src/DUPSS.API/appsettings.json
 /src/DUPSS.API/appsettings.json
+/src/DUPSS.API/wwwRoot/uploads
